project('fyp', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++14'])

src = ['main.cpp', 'CMS.cpp', 'BobHash.cpp', 'HashMap.cpp', 'TraceReader.cpp', 'Counter.cpp', 'xxhash.cpp', 'skew_estimation.cpp', 'final_experiments.cpp', 'optimal_parameters.cpp', 'topK.cpp']

executable('fyp',
           src,
           install : true)
